--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^3.7.2",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
