--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "velocity-animate": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
